# synapse-web-bridge

./: .gitignore  README.md  meson.build  package-lock.json  package.json  webpack.config.js
addon/src/: background.js  manifest.json
data/: com.paysonwallach.synapse.plugins.web.bridge.json
host-connector/: meson.build
host-connector/data/: com.paysonwallach.synapse.json
host-connector/src/: Main.vala
meson/: post_install.py
src/: Main.vala
synapse-firefox-plugin/: meson.build
synapse-firefox-plugin/src/: Main.vala
